# zmcp_model_deployments

./: README.md  marketsvc.py
churn-model-building/: modelling-churn.ipynb  prediction.py  training.py
churn-service/: Dockerfile  README.md  ReadMe  ReadMe.md  pred_svc.py  pyproject.toml
churn-service/templates/: index.html
