[project]
name = "modelserve-and-deployment"
version = "0.1.0"
description = "Manage dependencies for churn prediction service fast api deployment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "scikit-learn>=1.7.0",
    "uvicorn>=0.38.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9"
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
